apps/dssp-targetp-59/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-59
  namespace: dev
  labels:
    app: dssp-targetp-59
    backstage.io/kubernetes-id: dssp-targetp-59
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-59
  template:
    metadata:
      labels:
        app: dssp-targetp-59
        backstage.io/kubernetes-id: dssp-targetp-59
        environment: dev
    spec:
      containers:
        - name: dssp-targetp-59
          image: chaitanyapandeygspann/dssp-targetp-59:1.0.1
          ports:
            - containerPort: 5000
