apps/dssp-targetp-59/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-59
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetp-59
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dssp-targetp-59-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-59
                port:
                  number: 80
